integrate testing and screening from Nam's repo
